send verification email implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+emailServiceUrl=http://35.237.177.182:8081
+
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/myapp
 spring.datasource.username=myapp_user
 spring.datasource.password=Admin#123
@@ -7,3 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+auth-app-service.email-service-send-verification-email-endpoint=/mail/sendVerificationMail
