--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ emailServiceUrl=http://35.237.177.182:8081
 
 
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/myapp
+spring.datasource.username=myapp_user
+spring.datasource.password=Admin#123
 spring.driver-class-name:org.postgresql.Driver
 
 spring.jpa.show-sql=true
